--- a/hack/index.html
+++ b/hack/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>My hack folder </title>
+<title>My hack folder screenshot </title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
